2018-11-02 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/mod_rivet.[c|h]: add macro RIVET_MPM_BRIDGE to
    compose rivet bridge names

2018-10-17 Massimo Manghi <mxmanghi@apache.org>
    * tests/commands.tcl: changing test on self closing element
    * [doc/rivet.xml.in|doc/rivet.xml]: removed delimiters of
    symbols expanded by svn
    * doc/xml/commands.xml: fixed entities in ::rivet::xml manual page

2018-08-16 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: changing form to support single self
    closing XML elements such as <tag attr1="val1" attr2="val2".... /> 
    when if the text string is empty
    * tests/commands.tcl: changing ::rivet::xml test accordingly
    * doc/xml/commands.xml: documenting new ::rivet::xml feature

2018-08-07 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: first commit after svn to git migration.
    The trunk branch is now the master branch of the git repository.
    setting the master branch version as 3.1.0.
    * .gitignore: untracking Makefile.in and putting in .gitignore
    autools generated files
    * doc/rivet.xml.in: removing references to now unsupported 
    svn keywords substitutions

2018-06-25 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.in: the error handler of error scripts requires
    ::Rivet::script to keep the actual 'script' being run 
    (reintegrated into trunk from branches/3.0)

2018-06-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/*.tcl: fully qualifying calls to ::rivet::lempty

2018-06-14 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: fixed bug in error scripts' error handling (the
    case of handling an error that occurs in the default error script may
    need the introduction of a new test

2018-04-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/mod_rivet.h: changing argument list of function
    *mpm_thread_interp in the bridge interface. It must work